--- a/main/templates/all_airports.html
+++ b/main/templates/all_airports.html
@@ -8,7 +8,7 @@
     <form method="get" class="form-inline mb-4">
         <!-- Country Filter -->
         <label for="countryFilter" class="mr-2">Filter by Country:</label>
-        <select id="countryFilter" name="country" class="form-control mr-2" onchange="goToPage1(this.form)">
+        <select id="countryFilter" name="country" class="form-control custom-select mr-2" onchange="this.form.submit()">
             <option value="">-- All Countries --</option>
             {% for country in countries %}
                 <option value="{{ country }}" {% if country == selected_country %}selected{% endif %}>
@@ -16,28 +16,16 @@
                 </option>
             {% endfor %}
         </select>
-    
+
         <!-- Sort By -->
         <label for="sortBy" class="ml-4 mr-2">Sort by:</label>
-        <select id="sortBy" name="sort" class="form-control mr-2" onchange="goToPage1(this.form)">
+        <select id="sortBy" name="sort" class="form-control custom-select mr-2" onchange="this.form.submit()">
             <option value="default" {% if sort_by == "default" %}selected{% endif %}>Default (Unsorted)</option>
             <option value="label_asc" {% if sort_by == "label_asc" %}selected{% endif %}>Airport Name (A-Z)</option>
             <option value="label_desc" {% if sort_by == "label_desc" %}selected{% endif %}>Airport Name (Z-A)</option>
             <option value="country_asc" {% if sort_by == "country_asc" %}selected{% endif %}>Country (A-Z)</option>
             <option value="country_desc" {% if sort_by == "country_desc" %}selected{% endif %}>Country (Z-A)</option>
         </select>
-    
-        <!-- Items Per Page -->
-        <label for="itemsPerPage" class="ml-4 mr-2">Show:</label>
-        <select id="itemsPerPage" name="items_per_page" class="form-control mr-2" onchange="goToPage1(this.form)">
-            <option value="10" {% if items_per_page == 10 %}selected{% endif %}>10</option>
-            <option value="25" {% if items_per_page == 25 %}selected{% endif %}>25</option>
-            <option value="50" {% if items_per_page == 50 %}selected{% endif %}>50</option>
-        </select>
-        airports per page
-
-        <!-- Reset to Page 1 -->
-        <input type="hidden" name="airport_page" value="1">
     </form>
 
     <!-- Results Info -->
@@ -49,56 +37,54 @@
     <table class="table table-striped table-hover">
         <thead class="thead-light">
             <tr>
-                <th>Airport Name</th>
-                <th>Country</th>
+                {% if sort_by == "country_asc" or sort_by == "country_desc" %}
+                    <th>Country</th>
+                    <th>Airport Name</th>
+                {% else %}
+                    <th>Airport Name</th>
+                    <th>Country</th>
+                {% endif %}
             </tr>
         </thead>
         <tbody>
             {% for airport in airports_page %}
                 <tr>
-                    <td>
-                        <a href="{% url 'airport_details' airport_id=airport.id %}" class="text-primary">
-                            {{ airport.label }}
-                        </a>
-                    </td>
-                    <td>
-                        {{ airport.country }}
-                    </td>
+                    {% if sort_by == "country_asc" or sort_by == "country_desc" %}
+                        <td class="country-text">{{ airport.country }}</td>
+                        <td>
+                            <a href="{% url 'airport_details' airport_id=airport.id %}" class="link-hover-effect-airports">
+                                {{ airport.label }}
+                            </a>
+                        </td>
+                    {% else %}
+                        <td>
+                            <a href="{% url 'airport_details' airport_id=airport.id %}" class="link-hover-effect-airports">
+                                {{ airport.label }}
+                            </a>
+                        </td>
+                        <td class="country-text">{{ airport.country }}</td>
+                    {% endif %}
                 </tr>
             {% endfor %}
         </tbody>
     </table>
-
-    <!-- Pagination -->
+    
     <div class="pagination d-flex justify-content-between align-items-center">
         <div>
             {% if airports_page.has_previous %}
-                <a href="?airport_page={{ airports_page.previous_page_number }}&items_per_page={{ items_per_page }}&country={{ selected_country }}&sort={{ sort_by }}" class="btn btn-outline-primary">
-                    &laquo; Previous
-                </a>
+            <a href="?page={{ airports_page.previous_page_number }}&items_per_page={{ items_per_page }}&country={{ selected_country }}&sort={{ sort_by }}" class="btn btn-outline-primary">
+                &laquo; Previous
+            </a>
             {% endif %}
         </div>
         <span>Page {{ airports_page.number }} of {{ airports_page.paginator.num_pages }}</span>
         <div>
             {% if airports_page.has_next %}
-                <a href="?airport_page={{ airports_page.next_page_number }}&items_per_page={{ items_per_page }}&country={{ selected_country }}&sort={{ sort_by }}" class="btn btn-outline-primary">
-                    Next &raquo;
-                </a>
+            <a href="?page={{ airports_page.next_page_number }}&items_per_page={{ items_per_page }}&country={{ selected_country }}&sort={{ sort_by }}" class="btn btn-outline-primary">
+                Next &raquo;
+            </a>
             {% endif %}
         </div>
     </div>
 </div>
-
-<!-- JavaScript for Redirecting to Page 1 -->
-<script>
-    function goToPage1(form) {
-        // Explicitly set the page parameter to 1 before submitting
-        const input = document.createElement('input');
-        input.type = 'hidden';
-        input.name = 'airport_page';
-        input.value = '1';
-        form.appendChild(input);
-        form.submit();
-    }
-</script>
 {% endblock %}
