--- a/main/templates/countries_page.html
+++ b/main/templates/countries_page.html
@@ -12,15 +12,28 @@
         <p>No flag found for {{ country_data.name }}.</p>
     {% endif %}
 
-    <!-- Bootstrap Tabs -->
-    <ul class="nav nav-tabs" id="countryTabs" role="tablist">
+    <!-- General Information -->
+    <div class="tab-pane fade show active" id="general" role="tabpanel" aria-labelledby="general-tab">
+        {% for group in general_info_groups %}
+            <div class="general-info">
+                <div class="category-header">{{ group.category }}</div>
+                {% for field, value, icon in group.items %}
+                    <div class="info-item">
+                        <div class="icon">{{ icon }}</div>
+                        <div class="text">
+                            <div class="label">{{ field }}</div>
+                            <div class="value">{{ value }}</div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endfor %}
+    </div>
+
+    <!-- Tab Navigation -->
+    <ul class="nav nav-tabs mt-4" id="countryTabs" role="tablist">
         <li class="nav-item">
-            <a class="nav-link active" id="general-tab" data-toggle="tab" href="#general" role="tab" aria-controls="general" aria-selected="true">
-                General Information
-            </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" id="airports-tab" data-toggle="tab" href="#airports" role="tab" aria-controls="airports" aria-selected="false">
+            <a class="nav-link active" id="airports-tab" data-toggle="tab" href="#airports" role="tab" aria-controls="airports" aria-selected="true">
                 Airports
             </a>
         </li>
@@ -32,59 +45,43 @@
     </ul>
 
     <!-- Tab Content -->
-    <div class="tab-content mt-4" id="countryTabContent">
-        <!-- General Information -->
-        <div class="tab-pane fade show active" id="general" role="tabpanel" aria-labelledby="general-tab">
-            <table class="table">
-                <tr><th>Code</th><td>{{ country_data.code }}</td></tr>
-                <tr><th>Name</th><td>{{ country_data.name }}</td></tr>
-                <tr><th>Continent</th><td>{{ country_data.continent }}</td></tr>
-                <tr><th>Region is Contained In</th><td>{{ country_data.region_is_contained_in_label }}</td></tr>
-                <tr><th>Population</th><td>{{ country_data.population }}</td></tr>
-                <tr><th>Area</th><td>{{ country_data.area }}</td></tr>
-                <tr><th>Population Density</th><td>{{ country_data.pop_density }}</td></tr>
-                <tr><th>Coastline</th><td>{{ country_data.coastline }}</td></tr>
-                <tr><th>Net Migration</th><td>{{ country_data.net_migration }}</td></tr>
-                <tr><th>Infant Mortality</th><td>{{ country_data.infant_mortality }}</td></tr>
-                <tr><th>GDP</th><td>{{ country_data.gdp }}</td></tr>
-                <tr><th>Literacy Rate</th><td>{{ country_data.literacy }}</td></tr>
-                <tr><th>Phones</th><td>{{ country_data.phones }}</td></tr>
-                <tr><th>Arable</th><td>{{ country_data.arable }}</td></tr>
-                <tr><th>Crops</th><td>{{ country_data.crops }}</td></tr>
-                <tr><th>Other</th><td>{{ country_data.other }}</td></tr>
-                <tr><th>Climate</th><td>{{ country_data.climate }}</td></tr>
-                <tr><th>Birthrate</th><td>{{ country_data.birthrate }}</td></tr>
-                <tr><th>Deathrate</th><td>{{ country_data.deathrate }}</td></tr>
-                <tr><th>Agriculture</th><td>{{ country_data.agriculture }}</td></tr>
-                <tr><th>Industry</th><td>{{ country_data.industry }}</td></tr>
-                <tr><th>Service</th><td>{{ country_data.service }}</td></tr>
-            </table>
-        </div>
-
-        <!-- Airports -->
-        <div class="tab-pane fade" id="airports" role="tabpanel" aria-labelledby="airports-tab">
+    <div class="tab-content mt-4">
+        <!-- Airports Tab -->
+        <div class="tab-pane fade show active" id="airports" role="tabpanel" aria-labelledby="airports-tab">
             <h4>Airports</h4>
             <form method="get" class="form-inline mb-4">
                 <label for="airportSort">Sort by:</label>
-                <select id="airportSort" name="airport_sort" class="form-control mr-2" onchange="this.form.submit()">
+                <select id="airportSort" name="airport_sort" class="form-control custom-select mr-2" onchange="this.form.submit()">
                     <option value="label_asc" {% if airport_sort == "label_asc" %}selected{% endif %}>Airport Name (A-Z)</option>
                     <option value="label_desc" {% if airport_sort == "label_desc" %}selected{% endif %}>Airport Name (Z-A)</option>
                 </select>
 
                 <label for="airportItemsPerPage" class="ml-4">Show:</label>
-                <select id="airportItemsPerPage" name="airport_items_per_page" class="form-control ml-2" onchange="this.form.submit()">
+                <select id="airportItemsPerPage" name="airport_items_per_page" class="form-control custom-select ml-2" onchange="this.form.submit()">
                     <option value="10" {% if airport_items_per_page == 10 %}selected{% endif %}>10</option>
                     <option value="25" {% if airport_items_per_page == 25 %}selected{% endif %}>25</option>
                     <option value="50" {% if airport_items_per_page == 50 %}selected{% endif %}>50</option>
                 </select>
-                airports per page
             </form>
-            <ul>
-                {% for airport in airports_page %}
-                    <li><a href="{% url 'airport_details' airport_id=airport.id %}">{{ airport.label }}</a>
-                    </li>
-                {% endfor %}
-            </ul>
+
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Airport Name</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for airport in airports_page %}
+                        <tr>
+                            <td>
+                                <a href="{% url 'airport_details' airport_id=airport.id %}" class="link-hover-effect-airports">
+                                    {{ airport.label }}
+                                </a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
 
             <!-- Pagination -->
             <div class="pagination d-flex justify-content-between align-items-center">
@@ -106,29 +103,42 @@
             </div>
         </div>
 
-        <!-- Regions -->
+        <!-- Regions Tab -->
         <div class="tab-pane fade" id="regions" role="tabpanel" aria-labelledby="regions-tab">
             <h4>Regions</h4>
             <form method="get" class="form-inline mb-4">
                 <label for="regionSort">Sort by:</label>
-                <select id="regionSort" name="region_sort" class="form-control mr-2" onchange="this.form.submit()">
+                <select id="regionSort" name="region_sort" class="form-control custom-select mr-2" onchange="this.form.submit()">
                     <option value="label_asc" {% if region_sort == "label_asc" %}selected{% endif %}>Region Name (A-Z)</option>
                     <option value="label_desc" {% if region_sort == "label_desc" %}selected{% endif %}>Region Name (Z-A)</option>
                 </select>
 
                 <label for="regionItemsPerPage" class="ml-4">Show:</label>
-                <select id="regionItemsPerPage" name="region_items_per_page" class="form-control ml-2" onchange="this.form.submit()">
+                <select id="regionItemsPerPage" name="region_items_per_page" class="form-control custom-select ml-2" onchange="this.form.submit()">
                     <option value="10" {% if region_items_per_page == 10 %}selected{% endif %}>10</option>
                     <option value="25" {% if region_items_per_page == 25 %}selected{% endif %}>25</option>
                     <option value="50" {% if region_items_per_page == 50 %}selected{% endif %}>50</option>
                 </select>
-                regions per page
             </form>
-            <ul>
-                {% for region in regions_page %}
-                    <li><a href="{% url 'region_details' region_id=region.id %}">{{ region.label }}</a></li>
-                {% endfor %}
-            </ul>
+
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Region Name</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for region in regions_page %}
+                        <tr>
+                            <td>
+                                <a href="{% url 'region_details' region_id=region.id %}" class="link-hover-effect-airports">
+                                    {{ region.label }}
+                                </a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
 
             <!-- Pagination -->
             <div class="pagination d-flex justify-content-between align-items-center">
@@ -158,7 +168,7 @@
         // Check if there's a saved tab in localStorage
         const savedTab = localStorage.getItem('activeTab');
         if (savedTab) {
-            const activeTab = document.querySelector(`[href="${savedTab}"]`);
+            const activeTab = document.querySelector(`a[href="${savedTab}"]`); // Corrected querySelector
             if (activeTab) {
                 activeTab.click();
             }
@@ -172,6 +182,6 @@
             });
         });
     });
-    
 </script>
+
 {% endblock %}
