--- a/templates/base.html
+++ b/templates/base.html
@@ -548,7 +548,7 @@
     <!-- Footer -->
     <footer class="footer text-center py-3">
         <div class="container">
-            <span>Powered by Django & Bootstrap | Airpedia</span>
+            <span>Powered by Pain & Depression | WorldTraCe</span>
         </div>
     </footer>
 
