--- a/main/templates/partials/search_tab.html
+++ b/main/templates/partials/search_tab.html
@@ -63,7 +63,6 @@
 
     </style>
 </head>
-
 <form method="get" class="form-inline mb-4">
     <input type="hidden" name="query" value="{{ query }}">
     <label for="sortBy">Sort by:</label>
@@ -72,7 +71,6 @@
         <option value="desc" {% if sort_by == 'desc' %}selected{% endif %}>Reverse Alphabetical</option>
     </select>
 </form>
-
 <table class="table">
     <tbody>
         {% for item in data %}
@@ -94,13 +92,18 @@
         {% endfor %}
     </tbody>
 </table>
-
 <nav>
     <ul class="pagination">
-        {% for page_num in data.paginator.page_range %}
-            <li class="page-item {% if data.number == page_num %}active{% endif %}">
-                <a class="page-link" href="?query={{ query }}&sort={{ sort_by }}&{{ tab_name|lower }}_page={{ page_num }}">{{ page_num }}</a>
-            </li>
+        {% for page_num in pagination_range %}
+            {% if page_num %}
+                <li class="page-item {% if data.number == page_num %}active{% endif %}">
+                    <a class="page-link" href="?query={{ query }}&sort={{ sort_by }}&{{ tab_name|lower }}_page={{ page_num }}">{{ page_num }}</a>
+                </li>
+            {% else %}
+                <li class="page-item disabled">
+                    <span class="page-link">...</span>
+                </li>
+            {% endif %}
         {% endfor %}
     </ul>
 </nav>
