--- a/templates/base.html
+++ b/templates/base.html
@@ -502,7 +502,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">WorldTraCe</a>
+            <a class="navbar-brand" href="{% url 'results_view' %}">WorldTraCe</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
