--- a/main/templates/countries_page.html
+++ b/main/templates/countries_page.html
@@ -10,6 +10,9 @@
         </div>
     {% else %}
         <p>No flag found for {{ country_data.name }}.</p>
+        <img src="https://cdn.discordapp.com/attachments/1290524318618357760/1313567835984887860/IMG_20241204_010917.jpg?ex=67509ae1&is=674f4961&hm=d78c21df53aa883101ecadbdf5a2ca9a6785b9aa3f945286fe314aa4006a7558&" 
+            alt="Default flag image for {{ country_data.name }}" 
+            style="width: 150px; height: auto;">
     {% endif %}
 
     <!-- General Information -->
